# nes-c

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_hash.c  index.html  main.c  makefile  sdl_pixel_graphics.js  sdl_pixel_graphics.wasm
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  tests.yml
docs/: index.js  index.wasm
inc/: chip8.h
lib/: setup.sh
src/: CMakeLists.txt  chip8.c  chip8_font_set.c  chip8_impl.c  main.c
src/c2C02/: CMakeLists.txt  c2C02.c
src/c2C02/inc/: c2C02.h
src/c2C02/tests/: test_c2C02.cpp
src/c6502/: CMakeLists.txt  c6502.c
src/c6502/inc/: c6502.h
src/c6502/tests/: nes_test_driver.py  nes_test_runner.c  test_c6502.cpp  test_nestest_c6502.c
src/chip8/: CMakeLists.txt  chip8.c  chip8_font_set.c  chip8_impl.c  chip8_impl.h  test_chip8.cpp
src/chip8/inc/: chip8.h
src/gui/: CMakeLists.txt  main.c  template.html
src/nes_bus/: CMakeLists.txt  nes_bus.c
src/nes_bus/inc/: nes_bus.h
src/nes_bus/tests/: test_nes_bus.cpp
src/nes_cart/: CMakeLists.txt  nes_cart.c  nes_cart_impl.h
src/nes_cart/inc/: nes_cart.h
src/nes_cart/mappers/: impl.h  make_mapper_table.py  mapper0.c  mapper2.c  mapper_000.c  mapper_002.c  mapper_003.c  mapper_004.c  mapper_066.c
src/nes_cart/tests/: test_mapper2.cpp  test_mapper_002.cpp  test_mapper_004.cpp  test_nes_cart.cpp
src/nes_gamepad/: CMakeLists.txt  nes_gamepad.c
src/nes_gamepad/inc/: nes_gamepad.h
src/nes_gamepad/tests/: test_nes_gamepad.cpp
src/nes_mapper/: CMakeLists.txt  nes_mapper.c
src/nes_mapper/inc/: nes_mapper.h
src/sdl_pixel_graphics/: CMakeLists.txt  sdl_pixel_graphics.c  template.html
tests/: CMakeLists.txt  nes_test_driver.py  test_c6502.cpp  test_chip8.cpp  test_nestest.c  test_runner.cpp  tests.cpp
tests/nes_test_roms/: CMakeLists.txt  test_rom_tests.cpp
